--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
     <spark.freemarker.version>2.7.1</spark.freemarker.version>
     <freemarker.version>2.3.28</freemarker.version>
     <slf4j.version>1.7.25</slf4j.version>
+    <sqlite.jdbc.version>3.25.2</sqlite.jdbc.version>
     
     <!-- Test Dependency Versions -->
     <maven.surefire.version>2.19.1</maven.surefire.version>
@@ -57,6 +58,14 @@
       <artifactId>slf4j-simple</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
+    
+    <!-- JDBC Driver -->
+	<dependency>
+		<groupId>org.xerial</groupId>
+		<artifactId>sqlite-jdbc</artifactId>
+		<version>${sqlite.jdbc.version}</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
